- New GC-normalization for smaller gene panels
- Removed automatic curation, since the tuned likelihood model 
  of runAbsoluteCN was hard to beat
- More control over homozygous deletions (significant portion
  of wrong maximum likelihood solutions had many homozygous deletions)  
- Faster post.optimize=TRUE by not optimizing poor fits or unlikely solutions
- Tweaks to segmentationPSCBS
- Lots of improvements to command line scripts
- Code cleanups (switch from inlinedocs to roxygen, from message/warn to
  futile.logger)
- seg.file can contain multiple samples


API CHANGES

- Deprecated functions: createSNPBlacklist, getDiploid, autoCurateResults
- Defunct functions: createExonWeightFile
- Changed defaults: 
    - min.normals 5 (from 10) in setMappingBiasVcf
    - max.segments 300 (from 200) in runAbsoluteCN               
    - min.targeted.base 5 (from 4) in filterTargets
    - max.homozygous.loss now a double(2) vector, with first element
      specifying the maximum fraction of genome deleted (default 5%) and the 
      second value the maximum size of a homozygous loss (default 10mb).
- Other minor changes:
    - Renamed some predictSomatic() output column names
    - Removed "beta.model" from "SNV.posterior" slot since model is now an
      option.
    - Moved remove.off.target.snvs to filterVcfBasic
    - Moved normalDB from filterTargets to runAbsoluteCN, since it is now 
      use for more than target filtering.
    - Dropped BED file support in calculateGCContentByInterval
      Instead provide support for GRanges
    - poolCoverage: w argument now used as provided, not 
        normalized so that w[1] is 1
    - Removed ... from runAbsoluteCN
    - Added centromeres to segmentation function
    - Replaced contamination.cutoff with contamination.range in filterVcfBasic 
    - Removed verbose from most functions, since messages are now controlled
      with futile.logger.  
    - Smoothing of log-ratios now optionally done by runAbsoluteCN, not