@@ -4,4 +4,7 @@ test_getSexFromVcf <- function() {
     vcf <- readVcf(vcf.file, "hg19")
     sex <- getSexFromVcf(vcf)
     checkTrue(is.na(sex))
+    vcfs <- vcf[info(vcf)$SOMATIC]
+    getSexFromVcf(vcfs, "LIB-02240e4")
+    checkTrue(is.na(sex))
 }    
